# new_project_ETL

./: .gitignore  README.md  main.py  pyproject.toml
app/pipeline/: extract.py  load.py  main.py  transform.py
data/template/: template_1.xlsx
test/: test_pipeline_transform.py
