[tool.poetry]
name = "new project etl"
version = "0.1.0"
description = "projeto de estruturação de embiente virtual para gestão de projetos em python"
authors = ["yes"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
pandas = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
